--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -124,8 +124,8 @@
     <div class="row">
         <div class="col-12 text-center">
             <div class="section-title mb-4 pb-2">
-                <h4 class="title mb-4">ITYOURWAY Groups Blog Posts</h4>
-                <p class="text-muted para-desc mx-auto mb-0">Join a community of 2,000+ Professional DevOps and cloud Expert</p>
+                <h4 class="title mb-4">ITYOURWAY SPRINGBOOT APPLICATION</h4>
+                <p class="text-muted para-desc mx-auto mb-0">CONGRATULATION ON YOUR FULL CI-CD SET-UP... WELL DONE</p>
             </div>
         </div>
     </div>
