--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -125,7 +125,7 @@
         <div class="col-12 text-center">
             <div class="section-title mb-4 pb-2">
                 <h4 class="title mb-4">ITYOURWAY SPRINGBOOT APPLICATION</h4>
-                <p class="text-muted para-desc mx-auto mb-0">CONGRATULATION ON YOUR FULL CI-CD SET-UP... WELL DONE</p>
+                <p class="text-muted para-desc mx-auto mb-0">CONGRATULATIONS ON YOUR FULL CI-CD SET-UP... WELL DONE</p>
             </div>
         </div>
     </div>
