--- a/src/main/resources/templates/group_eight_blog_item.html
+++ b/src/main/resources/templates/group_eight_blog_item.html
@@ -17,7 +17,7 @@
           <div class="card mb-4">
             <img src="https://img.freepik.com/free-photo/double-exposure-caucasian-man-virtual-reality-vr-headset-is-presumably-gamer-hacker-cracking-code-into-secure-network-server-with-lines-code_146671-18938.jpg?w=1380&t=st=1704328648~exp=1704329248~hmac=e3b9c550a386e52c3e3cb4aa0d3cddf6519ae9687f005a910121f74eb269a492" alt="Blog Image">
             <div class="card-body">
-              <h2 class="card-title">Group Eight Message</h2>
+              <h2 class="card-title">Group Eight Messages</h2>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla felis purus, fermentum nec ullamcorper ac, vehicula vel nunc. Vestibulum rutrum, libero ut ultricies aliquam.</p>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla felis purus, fermentum nec ullamcorper ac, vehicula vel nunc. Vestibulum rutrum, libero ut ultricies aliquam. Suspendisse potenti. Mauris eget.
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla felis purus, fermentum nec ullamcorper ac, vehicula vel nunc. Vestibulum rutrum, libero ut ultricies aliquam.
